[project]
name = "bvbrc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adam Bates", email = "adambates923@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.3",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.4.7",
    "sphinxawesome-theme>=5.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "beautifulsoup4>=4.13.4",
    "pandas>=2.0.0",
    "polars>=1.0.0",
    "ruff>=0.11.11",
    "sphinx>=7.4.7",
    "sphinxawesome-theme>=5.3.2",
]
